# Loopang

./: .gitignore  App.py  DockerENV.env  Dockerfile  README.md  build.gradle  cert.pem  config.py  db-upgrade.sh  docker-compose.yml  image-clear.sh  key.pem  logs.sh  manage.py  requirements.txt  startup.sh
api/: __init__.py  auth.py  download.py  feed.py  like.py  login.py  search_music.py  signup.py  upload.py  user_info.py
app/: build.gradle
app/src/cpp/: CMakeLists.txt  cppm.toml
app/src/cpp/cmake/: android-ndk-include.cmake  cppm_tool.cmake
app/src/cpp/src/: AudioEngine.cpp  AudioEngine.h  CommonStream.cpp  CommonStream.h  EchoEngine.cpp  EchoEngine.h  PlayBackStream.cpp  PlayBackStream.h  RecordingStream.cpp  RecordingStream.h  Sound.h  Synth.h  TestAudioEngine.h  android_log.h  native-audio-lib.cpp
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: enter_from_right.xml  fade_in.xml  fade_out.xml  translate_down.xml  translate_left.xml  translate_right.xml  translate_up.xml
app/src/main/res/color/: mute_toggle_text_selector.xml
app/src/main/res/drawable/: block_effect_item_background.xml  block_effect_item_background_s.xml  block_volume_seekbar.xml  btn_login.xml  btn_logout.xml  community_feedbtn.xml  community_feedbtn_ver_gray.xml  community_list_background1.xml  community_list_background2.xml  community_search_tag_back2_for_size.xml  drawer_background.xml  (+100 more)
gradle/wrapper/: gradle-wrapper.properties
migrations/versions/: ed88bbe10014_.py
model/: User.py  __init__.py  database.py  likes.py  music.py  tag.py
tools/: request_message.py
(+251 files in other folders)
